--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,7 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
-ExecStart=/usr/bin/mono --debug __FINALPATH__/JackettConsole.exe --NoRestart >> /var/log/__APP__/__APP__.log 2>&1
+ExecStart=__FINALPATH__/jackett --NoRestart >> /var/log/__APP__/__APP__.log 2>&1
 TimeoutStopSec=20
 KillMode=process
 Restart=on-failure
